k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smstore-actions
spec:
  selector:
    app: smstore-actions
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 80
      name: http
