k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: smstore-actions-ingress
spec:
  rules:
  - host: smstore-actions.tiemcuatui.com
    http:
      paths:
      - backend:
          serviceName: smstore-actions
          servicePort: 80
